# vad-code

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  mypy.ini  pyproject.toml  setup.cfg  test_file_system.py
.github/workflows/: ci.yml
presets/: .env.anthropic  .env.lm-studio  .env.ollama  .env.openai-gpt4  .env.openai-gpt4o  README.md
tests/: test_agent.py  test_agent_extended.py  test_audit_logger.py  test_backup_manager.py  test_bad_cases.py  test_command_security.py  test_error_messages.py  test_executor.py  test_executor_errors.py  test_file_system.py  test_file_tools.py  test_file_tools_errors.py  test_git_tools.py  test_llm_client.py  test_llm_providers.py  test_memory.py  test_metrics.py  test_multi_agent.py  test_multi_agent_tools.py  test_new_tools.py  test_orchestrator.py  test_permissions.py  test_phase2_tools.py  test_project_config.py  test_project_memory.py  test_schemas.py  test_smoke_import.py  test_startup.py  test_tokenizer.py
vad-code/: __main__.py
vad_code/: DOCKER_README.md  __main__.py  config.py
vad_code/core/: agent.py  executor.py  memory.py  project_config.py  project_memory.py
vad_code/core/multi_agent/: __init__.py  agent_pool.py  base_agent.py  communication.py  orchestrator.py  specialized_agents.py
vad_code/infrastructure/: audit_logger.py  backup_manager.py  bad_cases.py  cache.py  cli_colors.py  command_security.py  error_messages.py  file_system.py  llm_client.py  llm_providers.py  logger.py  metrics.py  tokenizer.py
vad_code/tools/: __init__.py  bad_case_tools.py  command_tools.py  file_system_tools.py  file_tools.py  git_tools.py  info_tools.py  multi_agent_tools.py  permissions.py  phase2_tools.py  project_tools.py  registry.py  schemas.py  search_tools.py
