[project]
name = "vad-code"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.14.0",
    "pytest-asyncio>=1.3.0",
    "transformers>=5.8.0",
    "json5>=0.9.14",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.20.2",
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "pytest-coverage>=0.0",
    "pytest-mock>=3.15.1",
]

[tool.flake8]
max-line-length = 100
ignore = ["E203", "W503"]
exclude = [".venv", "__pycache__", ".git", "htmlcov", ".pytest_cache"]
